got the stack build to work again

--- a/demo-workflow/templates/weekly.smos.template
+++ b/demo-workflow/templates/weekly.smos.template
@@ -1,5 +1,6 @@
 - entry: Weekly actions
   forest:
   - header: Weekly review
+    state: READY
     timestamps:
       SCHEDULED: "[ %F | saturday ]"
