--- a/smos-data-gen/package.yaml
+++ b/smos-data-gen/package.yaml
@@ -32,6 +32,7 @@ tests:
   smos-data-test:
     main: Spec.hs
     source-dirs: test/
+    build-tools: hspec-discover
     ghc-options:
     - -threaded
     - -rtsopts
