got things to build

--- a/smos-asciinema/package.yaml
+++ b/smos-asciinema/package.yaml
@@ -45,6 +45,7 @@ executables:
   smos-asciinema-test:
     main: Spec.hs
     source-dirs: test/
+    build-tools: hspec-discover
     ghc-options:
     - -threaded
     - -rtsopts
