golden test case for smos-scheduler

--- a/smos-scheduler/package.yaml
+++ b/smos-scheduler/package.yaml
@@ -62,7 +62,12 @@ tests:
     - genvalidity-time
     - hspec
     - mtl
+    - path
+    - path-io
+    - smos-data
     - smos-data-gen
     - smos-scheduler
     - text
     - time
+    - yaml
+    - yamlparse-applicative
