fixed the thread safety problem that was introduced by upgrading persistent

--- a/smos-sync-client-gen/package.yaml
+++ b/smos-sync-client-gen/package.yaml
@@ -48,6 +48,7 @@ tests:
   smos-sync-client-test:
     main: Spec.hs
     source-dirs: test/
+    build-tools: hspec-discover
     ghc-options:
     - -threaded
     - -rtsopts
