--- a/smos-client-gen/package.yaml
+++ b/smos-client-gen/package.yaml
@@ -37,6 +37,7 @@ tests:
   smos-client-test:
     main: Spec.hs
     source-dirs: test/
+    build-tools: hspec-discover
     ghc-options:
     - -threaded
     - -rtsopts
