--- a/smos-query/package.yaml
+++ b/smos-query/package.yaml
@@ -52,6 +52,7 @@ tests:
   smos-query-test:
     main: Spec.hs
     source-dirs: test/
+    build-tools: hspec-discover
     ghc-options:
     - -threaded
     - -rtsopts
