--- a/smos-report-gen/package.yaml
+++ b/smos-report-gen/package.yaml
@@ -42,6 +42,7 @@ tests:
   smos-report-test:
     main: Spec.hs
     source-dirs: test/
+    build-tools: hspec-discover
     ghc-options:
     - -threaded
     - -rtsopts
