--- a/smos-web-server/package.yaml
+++ b/smos-web-server/package.yaml
@@ -66,6 +66,7 @@ tests:
   smos-web-server-test:
     main: Spec.hs
     source-dirs: test
+    build-tools: hspec-discover
     ghc-options:
     - -Wall
     - -threaded
