--- a/smos-api-gen/package.yaml
+++ b/smos-api-gen/package.yaml
@@ -29,6 +29,7 @@ tests:
   smos-api-test:
     main: Spec.hs
     source-dirs: test/
+    build-tools: hspec-discover
     ghc-options:
     - -threaded
     - -rtsopts
