--- a/smos-server-gen/package.yaml
+++ b/smos-server-gen/package.yaml
@@ -54,6 +54,7 @@ tests:
   smos-server-test:
     main: Spec.hs
     source-dirs: test/
+    build-tools: hspec-discover
     ghc-options:
     - -threaded
     - -rtsopts
