--- a/stack.yaml
+++ b/stack.yaml
@@ -193,7 +193,8 @@ nix:
   path: [ "nixpkgs=https://github.com/NixOS/nixpkgs/archive/e3a2247046d4de66b9b193a6ab3ff040fa3da86d.tar.gz" ]
   add-gc-roots: true
   packages:
-  - zlib
+  - asciinema
+  - autoconf
   - haskellPackages.autoexporter
   - killall
-  - autoconf
+  - zlib
