add a little random delay to typing in smos-asciinema

--- a/smos-asciinema/package.yaml
+++ b/smos-asciinema/package.yaml
@@ -18,6 +18,7 @@ library:
     - bytestring
     - containers
     - envparse
+    - normaldistribution
     - optparse-applicative
     - path
     - path-io
