tried to make a new cast

--- a/smos-asciinema/package.yaml
+++ b/smos-asciinema/package.yaml
@@ -17,7 +17,10 @@ library:
   dependencies:
     - bytestring
     - containers
+    - directory
+    - dirforest
     - envparse
+    - filepath
     - normaldistribution
     - optparse-applicative
     - path
