--- a/smos-asciinema/package.yaml
+++ b/smos-asciinema/package.yaml
@@ -14,6 +14,8 @@ library:
   source-dirs: src/
   ghc-options: -Wall
   build-tools: autoexporter
+  c-sources:
+    - cbits/window_size.c
   dependencies:
     - bytestring
     - containers
@@ -29,6 +31,7 @@ library:
     - text
     - time
     - typed-process
+    - unix
     - validity
     - yaml
     - yamlparse-applicative
