--- a/smos-asciinema/examples/archive.yaml
+++ b/smos-asciinema/examples/archive.yaml
@@ -1,22 +1,24 @@
 working-dir: ../../demo-workflow
 workflow-dir: ../../demo-workflow
 files:
-  - projects/dishwasher.smos
+  - projects/smos.smos
   - archive
 input:
 - type: "tree\n"
 - wait: 2000
-- type: "smos projects/dishwasher.smos\n"
+- type: "smos-query next\n"
 - wait: 2000
-- send: "tc"
-- wait: 1000
-- send: "h"
-- wait: 1000
-- send: "tc"
+- type: "smos projects/smos.smos\n"
+- wait: 2000
+- send: "td"
 - wait: 1000
 - send: "q"
+- wait: 1000
+- type: "smos-archive projects/smos.smos\n"
 - wait: 2000
-- type: "smos-archive projects/dishwasher.smos\n"
+- send: "y\n"
 - wait: 2000
 - type: "tree\n"
+- wait: 2000
+- type: "smos-query next\n"
 - wait: 2000
