started on a SmosFileEditorCursor

--- a/smos-cursor-gen/package.yaml
+++ b/smos-cursor-gen/package.yaml
@@ -27,6 +27,7 @@ library:
   - fuzzy-time
   - fuzzy-time-gen
   - genvalidity
+  - genvalidity-path
   - genvalidity-text
   - genvalidity-time
   - smos-cursor
