--- a/smos-cursor-gen/package.yaml
+++ b/smos-cursor-gen/package.yaml
@@ -54,6 +54,7 @@ tests:
     - dirforest
     - genvalidity-hspec
     - genvalidity-hspec-optics
+    - genvalidity-path
     - hspec
     - hspec-core
     - path
