got tests to pass again

--- a/smos/package.yaml
+++ b/smos/package.yaml
@@ -93,6 +93,7 @@ tests:
     - genvalidity-hspec
     - genvalidity-hspec-aeson
     - genvalidity-hspec-optics
+    - genvalidity-path
     - genvalidity-text
     - genvalidity-time
     - genvalidity-unordered-containers
