put back the startup changes of opening the forest

--- a/smos/test_resources/golden/promotions.yaml
+++ b/smos/test_resources/golden/promotions.yaml
@@ -9,7 +9,7 @@ before:
   - e
   - f
 commands:
-- forestToggleCollapse
+- forestMoveToFirst
 - forestMoveDown
 - forestToggleCollapse
 - forestMoveDown
