--- a/smos-calendar-import/package.yaml
+++ b/smos-calendar-import/package.yaml
@@ -56,6 +56,7 @@ tests:
     - data-default
     - genvalidity
     - genvalidity-hspec
+    - genvalidity-hspec-aeson
     - genvalidity-text
     - hspec
     - iCalendar
