--- a/smos-calendar-import/package.yaml
+++ b/smos-calendar-import/package.yaml
@@ -52,6 +52,7 @@ tests:
     build-tools: hspec-discover
     dependencies:
     - QuickCheck
+    - bytestring
     - containers
     - data-default
     - genvalidity
