--- a/smos-calendar-import/package.yaml
+++ b/smos-calendar-import/package.yaml
@@ -35,6 +35,7 @@ library:
     - time
     - validity
     - validity-text
+    - validity-time
     - yaml
     - yamlparse-applicative
 
@@ -59,6 +60,7 @@ tests:
     - genvalidity-hspec
     - genvalidity-hspec-aeson
     - genvalidity-text
+    - genvalidity-time
     - hspec
     - iCalendar
     - mtl
