--- a/smos-asciinema/package.yaml
+++ b/smos-asciinema/package.yaml
@@ -17,6 +17,7 @@ library:
   c-sources:
     - cbits/window_size.c
   dependencies:
+    - aeson
     - bytestring
     - containers
     - directory
@@ -27,6 +28,7 @@ library:
     - optparse-applicative
     - path
     - path-io
+    - pretty-show
     - random
     - smos-report
     - text
