--- a/.hlint.yaml
+++ b/.hlint.yaml
@@ -5,6 +5,8 @@
 - ignore:
     name: "Use uncurry"
 - ignore:
+    name: "Use String"
+- ignore:
     name: "Use second"
 - ignore:
     name: "Reduce duplication"
