--- a/smos-docs-site/content/casts/next.yaml
+++ b/smos-docs-site/content/casts/next.yaml
@@ -2,13 +2,13 @@ working-dir: ../../demo-workflow
 workflow-dir: ../../demo-workflow
 file: projects/blog.smos
 input:
-- type: "smos-query next\n"
+- type: "smos-query next\r"
 - wait: 2000
-- type: "smos projects/blog.smos\n"
+- type: "smos projects/blog.smos\r"
 - wait: 2000
 - send: 'e'
 - wait: 500
-- type: "Next-action blogpost\nGoal: Write a blogpost about how to use smos' next-action report"
+- type: "Next-action blogpost\rGoal: Write a blogpost about how to use smos' next-action report"
 - wait: 250
 - send: "\e"
 - wait: 250
@@ -24,9 +24,9 @@ input:
 - wait: 1000
 - send: "q"
 - wait: 250
-- type: "smos-query next\n"
+- type: "smos-query next\r"
 - wait: 2000
-- type: "smos\n"
+- type: "smos\r"
 - wait: 500
 - send: "rn"
 - wait: 500
@@ -42,13 +42,13 @@ input:
 - wait: 250
 - send: "j"
 - wait: 500
-- send: "\n"
+- send: "\r"
 - wait: 500
 - send: 'td'
 - wait: 1000
 - send: "q"
 - wait: 250
-- type: "smos-query next\n"
+- type: "smos-query next\r"
 - wait: 2000
 
 
