--- a/smos-docs-site/content/casts/basics.yaml
+++ b/smos-docs-site/content/casts/basics.yaml
@@ -1,6 +1,6 @@
 file: foo.smos
 input:
-- type: "smos foo.smos\r"
+- type: "smos foo.smos\n"
 - wait: 1000
 # Look around in the help page
 - send: '?'
