--- a/stack.yaml
+++ b/stack.yaml
@@ -28,6 +28,9 @@ packages:
 - smos-sync-client-gen
 - smos-web-server
 
+ghc-options:
+  "$locals": -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -Wpartial-fields -Widentities -Wredundant-constraints -Wcpp-undef -Wcompat
+
 extra-deps:
 # No idea why these have to be here ... ? 
 - directory-1.3.6.1@sha256:3dc9c69c8e09ec95a7a45c6d06abe0f0d2f604439c37e5f88e5a6c335b088d71,2810
